--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -6,14 +6,55 @@
     android:layout_height="match_parent"
     tools:context=".fragment.ListFragment">
 
-    <Button
-        android:id="@+id/buttonSearch"
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/buttonReturn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
-        android:text="@string/buttonSearch"
+        android:layout_marginTop="504dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="@color/return_button"
+        app:icon="@drawable/lock"
+        app:iconSize="0dp"
+        app:iconTint="@color/return_icon"
+        app:layout_constraintEnd_toStartOf="@+id/searchButton"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/searchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="461dp"
+        android:backgroundTint="@color/search_button"
+        android:fontFamily="@font/roboto"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="12dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="12dp"
+        android:text="@string/headline"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/search_button_text"
+        android:textSize="22sp"
+        app:cornerRadius="100dp"
+        app:icon="@drawable/search_icon"
+        app:iconSize="30dp"
+        app:iconTint="@color/search_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="332dp"
+        android:layout_marginBottom="180dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
