--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,9 @@
         <item name="android:background">@color/black_overlay</item>
         <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
     </style>
+
+    <style name="headline">
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColor">#00210F</item>
+    </style>
 </resources>
