--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -2,59 +2,117 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.ListFragment">
+    tools:context=".fragments.ListFragment">
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/buttonReturn"
+    <TextView
+        android:id="@+id/backgroundText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="504dp"
-        android:layout_marginEnd="20dp"
-        android:backgroundTint="@color/return_button"
-        app:icon="@drawable/lock"
-        app:iconSize="0dp"
-        app:iconTint="@color/return_icon"
-        app:layout_constraintEnd_toStartOf="@+id/searchButton"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/searchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="461dp"
-        android:backgroundTint="@color/search_button"
+        android:layout_centerHorizontal="true"
+        android:layout_weight="1"
         android:fontFamily="@font/roboto"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:paddingLeft="20dp"
-        android:paddingTop="12dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="12dp"
-        android:text="@string/headline"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/search_button_text"
-        android:textSize="22sp"
-        app:cornerRadius="100dp"
-        app:icon="@drawable/search_icon"
-        app:iconSize="30dp"
-        app:iconTint="@color/search_button_text"
+        android:gravity="top"
+        android:lineHeight="112sp"
+        android:text="@string/background_string"
+        android:textColor="#F0F1EC"
+        android:textFontWeight="800"
+        android:textSize="96sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/itemList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <FrameLayout
+        android:id="@+id/backgroundClicker"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </FrameLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/buttonsLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="332dp"
-        android:layout_marginBottom="180dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
+        android:layout_marginBottom="28dp"
+        android:paddingBottom="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
+            android:id="@+id/lockButton"
+            android:layout_width="66dp"
+            android:layout_height="54dp"
+            android:layout_marginEnd="18dp"
+            android:background="@drawable/lock_full_icon"
+            app:layout_constraintEnd_toStartOf="@id/itemSearch"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/itemSearch"
+            android:layout_width="555dp"
+            android:layout_height="54dp"
+            android:layout_marginStart="18dp"
+            android:background="@drawable/rounded_edit_text_shape"
+            android:drawableStart="@drawable/search_icon"
+            android:drawablePadding="10dp"
+            android:ems="10"
+            android:hint="@string/headline_base_string"
+            android:imeOptions="actionSearch"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:textAppearance="@style/headline_text_style"
+            android:textColor="@color/search_button_text_color"
+            android:textStyle="normal"
+            android:visibility="gone"
+            app:layout_constraintStart_toEndOf="@+id/lockButton"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/searchButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:backgroundTint="@color/search_button_color"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:maxLines="1"
+            android:paddingLeft="20dp"
+            android:paddingTop="12dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="12dp"
+            android:stateListAnimator="@null"
+            android:text="@string/headline_base_string"
+            android:textAppearance="@style/headline_text_style"
+            android:textColor="@color/search_button_text_color"
+            app:cornerRadius="100dp"
+            app:icon="@drawable/search_icon"
+            app:iconSize="30dp"
+            app:iconTint="@color/search_button_text_color"
+            app:layout_constraintStart_toEndOf="@+id/lockButton"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
