--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -29,21 +29,19 @@
         android:id="@+id/itemList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
         app:layout_constraintTop_toTopOf="parent">
 
     </androidx.recyclerview.widget.RecyclerView>
 
     <FrameLayout
         android:id="@+id/backgroundClicker"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="true"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        android:clickable="false"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
