--- a/app/src/main/res/layout/secondary_info_layout.xml
+++ b/app/src/main/res/layout/secondary_info_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/secondaryInfoLayout"
     android:layout_width="330dp"
-    android:layout_height="80dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tvSecondaryName"
